Fix broken images on design.html

--- a/design.html
+++ b/design.html
@@ -202,7 +202,7 @@ permalink: /design/
             function showGalleryImage() {
                 var img = document.getElementById(i);
                 var modalImg = document.getElementById("modalImg");
-                var src = "images/design/" + i + ".jpg";
+                var src = "https://sybilmayard.com/images/design/" + i + ".jpg";
                 modal.style.display = "block";
                 modalImg.src = src;
                 captionText.innerHTML = img.alt;
