Add contact form

--- a/faqs.html
+++ b/faqs.html
@@ -23,7 +23,7 @@ permalink: /faqs/
                 "name": "How much do you charge?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "This would very much depend on the requirements of the project. Please <a href=mailto:info@sybilmayard.com>get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you"
+                  "text": "This would very much depend on the requirements of the project. Please <a href=https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd>get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you"
                 }
               }, {
                 "@type": "Question",
@@ -89,7 +89,7 @@ permalink: /faqs/
                 "name": "Can I see examples of your previous work?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Of course, please see my <a href=https://sybilmayard.com/clients>Clients</a> 
+                    "text":"Of course, please see my <a href=https://sybilmayard.com/clients>Clients</a> and <a href=https://sybilmayard.com/design>Design</a> 
                     page for examples of past work I have carried out for clients."
                 }
             }, {
@@ -119,8 +119,8 @@ permalink: /faqs/
                 you?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Please get in touch with me by emailing 
-                    <a href=mailto:info@sybilmayard.com>info@sybilmayard.com</a>."
+                    "text":"Please get in touch with me 
+                    <a href=https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd>here</a>."
                 }
             }
                 
@@ -181,7 +181,7 @@ permalink: /faqs/
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
                     <a href="https://sybilmayard.com/blog">Blog</a>
-                    <a href="https://sybilmayard.com/contact">Contact</a>
+                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -201,7 +201,7 @@ permalink: /faqs/
                     <hr>
                 </div>
                 <h3>How much do you charge?</h3>
-                <p>This would very much depend on the requirements of the project. Please <a href="mailto:info@sybilmayard.com">get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you.</p>
+                <p>This would very much depend on the requirements of the project. Please <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd">get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you.</p>
                 <h3>How long does the work take?</h3>
                 <p>The time it takes to complete the work would depend on the complexity of the project. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly. An estimated timeframe for completion of the project can be discussed during our initial call.</p>
                 <h3>What do I need to supply you with?</h3>
@@ -235,7 +235,7 @@ permalink: /faqs/
                         <li>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</li>
                     </ul>
                 <h3>Can I see examples of your previous work?</h3>
-                <p>Of course, please see my <a href="https://sybilmayard.com/clients">Clients</a>
+                <p>Of course, please see my <a href="https://sybilmayard.com/clients">Clients</a> and 
                     <a href="https://sybilmayard.com/design">Design</a> page for examples of past work I have carried out for clients.</p>
                 <h3>What are your qualifications?</h3>
                 <p>I hold an MSc in Computer Science from the <a href="https://www.kent.ac.uk" 
@@ -245,14 +245,14 @@ permalink: /faqs/
                 <h3>Are you a copywriter?</h3>
                 <p>I do not offer a copywriting service; please provide me with all of the copy you would like to add to the website. However, I am happy to proofread any text supplied in English. If you need a multilingual website, please also provide me with the translated copy.</p>
                 <h3>I cannot find the answer to my question in these FAQs. How can I contact you?</h3>
-                <p>Please get in touch with me by emailing <a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a>.</p>                                
+                <p>Please get in touch with me <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">here</a>.</p>                                
             </div>
         </div>
         <div class="contact section">
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -262,7 +262,7 @@ permalink: /faqs/
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybilmayard.com/about">About</a></p>
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
-                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -282,7 +282,7 @@ permalink: /faqs/
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="mailto:info@sybilmayard.com" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
                             <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
