--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
                     <a href="https://sybilmayard.com/blog">Blog</a>
-                    <a href="https://sybilmayard.com/contact">Contact</a>
+                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -86,7 +86,7 @@
                 <h3>We searched everywhere</h3>
                 <h4>The page you requested could have been moved or deleted.</h4>
                 <div class="padding-bottom padding-top">
-                    <a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a>
+                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Sybiltech</a>
                 </div>
                 <div class="padding-bottom padding-top">
                     <a class="btn-primary" href="/">Go Home</a>
@@ -97,7 +97,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -107,7 +107,7 @@
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybilmayard.com/about">About</a></p>
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
-                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="mailto:info@sybilmayard.com" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
                             <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
