--- a/clients.html
+++ b/clients.html
@@ -67,7 +67,7 @@ permalink: /clients/
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
                     <a href="https://sybilmayard.com/blog">Blog</a>
-                    <a href="https://sybilmayard.com/contact">Contact</a>
+                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -589,7 +589,7 @@ permalink: /clients/
                 <p class="padding-top center">Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
-                    <a class="btn-primary" href="https://sybilmayard.com/contact">Contact Me</a>
+                    <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -597,7 +597,7 @@ permalink: /clients/
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -607,7 +607,7 @@ permalink: /clients/
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybilmayard.com/about">About</a></p>
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
-                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -627,7 +627,7 @@ permalink: /clients/
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="mailto:info@sybilmayard.com" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
                             <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
