Update social media links and IONOS Partner Badge

--- a/about.html
+++ b/about.html
@@ -213,9 +213,9 @@ permalink: /about/
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                            <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-twitter"></i></a>
-                            <a href="https://instagram.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
@@ -223,10 +223,9 @@ permalink: /about/
                             <p><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
                                 <img src="https://sybilmayard.com/images/logos/FSB-Member-Logo-White.png"
                                     alt="FSB logo"></a></p>
-                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltech?origin=PartnerBadge" target="_blank" rel="noopener noreferrer">
-                            <img src="https://images-1.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" 
-                            alt="IONOS - Official Partner">
-                            </a></p>                        
+                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
+<img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
+</a></p>                        
                     </div>
                 </div>
                 <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
