--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,9 @@ permalink: /blog/
         </div>
         <div class="main section">
             <div class="container-1000">
-                <!-- <img src="https://sybilmayard.com/images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg"> -->
+                <h2>Cyber Security Best Practices for You and Your Business</h2>
+                <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practises, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
+                <a href="https://sybilmayard.com/cyber-security-best-practices-for-business">Read More >></a>
                 <h2>6 Reasons Why You Should be Using Shopify</h2>
                 <p>Are you planning to sell your products or services online? Consider choosing 
                     <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
@@ -94,7 +96,7 @@ permalink: /blog/
                     offers a selection of …</p>
                 <a href="https://sybilmayard.com/6-reasons-to-use-shopify">Read More >></a>
                 <h2>WebTip Wednesday Series Launched on Twitter</h2>
-                <p>A“WebTip Wednesday” is a new series of tweets for website development. Be 
+                <p>"WebTip Wednesday" is a new series of tweets for website development. Be 
                     sure not to miss a tweet by following Sybiltech on Twitter: 
                     <a href="https://twittwe.com/sybiltech1" target="_blank" rel="noopener 
                     noreferrer">twitter.com/Sybiltech1</a>.</p>
