--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -279,16 +279,16 @@ permalink: /cyber-security-best-practices-for-business/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" style="width: 500px; max-width: 100%;" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                             <p><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                                <img src="https://sybilmayard.com/images/logos/FSB-Member-Logo-White.png" style="width: 500px; max-width: 100%;"
+                                <img src="https://sybilmayard.com/images/logos/FSB-Member-Logo-White.png"
                                     alt="FSB logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" style="width: 500px; max-width: 100%;" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
